# wasmgrad

./: .envrc  .gitignore  CMakeLists.txt  README.md  package.json
cpp/wasmgrad/: engine.hpp  nn.hpp
examples/: CMakeLists.txt  engine_example.cpp  mlp_example.cpp
tests/: CMakeLists.txt  nn_test.cpp  value_test.cpp
